--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,90 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Maliavibes</title>
-  <%= stylesheet_link_tag    'application' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
-</head>
-<body>
+  	
+  	<title>Maliavibes</title>
+  	<%= stylesheet_link_tag    'application' %>
+  	<%= javascript_include_tag 'application' %>
+  	<%= csrf_meta_tags %>
 
-<%= yield %>
+  	<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+	<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+	<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+	<!--[if gt IE 8]><!--> <html class="no-js" lang="en-US"> <!--<![endif]-->
+	<head>
+
+		<!-- DEFAULT META TAGS -->
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<title>MaliaVibes</title>
+		<!-- DEFAULT META TAGS -->
+
+		<!-- FONTS -->
+		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
+		<!-- FONTS -->
+
+		<!-- CSS -->
+		<link rel='stylesheet' id="default-style-css"  href="/files/css/style.css" type='text/css' media='all' />
+		<link rel='stylesheet' id="owlcarousel-style-css"  href="/files/css/owl.carousel.css" type='text/css' media='all' />
+		<link rel='stylesheet' id="owltransitions-style-css"  href="/files/css/owl.transitions.css" type='text/css' media='all' />
+		<link rel="stylesheet" id="fontawesome-style-css" href="/files/css/font-awesome.min.css" type="text/css" media="all" />
+		<link rel="stylesheet" id="pe-icons-style-css" href="/files/css/pe-icon-7-stroke.css" type="text/css" media="all" />
+		<link rel='stylesheet' id="mqueries-style-css"  href="/files/css/mqueries.css" type='text/css' media='all' />
+		<link rel='stylesheet' id='owltransitions-style-css' href='files/css/owl.transitions.css' type='text/css' media='all' />
+		<link rel='stylesheet' id='fancybox-style-css'  href='files/css/fancybox.css' type='text/css' media='all' />
+		<link rel='stylesheet' id='isotope-style-css'  href='files/css/isotope.css' type='text/css' media='all' />
+		<link rel="stylesheet" id='rsplugin-style-css' href="files/rs-plugin/css/settings.css" type="text/css" media="all" />
+		<!-- CSS -->
+
+		<!-- FAVICON -->
+		<link rel="shortcut icon" href="files/uploads/favicon.png"/>
+		<!-- FAVICON -->
+
+		<!-- JQUERY LIBRARY -->
+		<script src="files/js/jquery-1.9.1.min.js"></script>
+		<!-- JQUERY LIBRARY -->
+		</head>
+	<body>
+
+	<%= yield %>
+	<!-- PAGE CONTENT -->
+
+	<!-- SCRIPTS -->
+	<script type="text/javascript" src="/files/js/retina.js"></script>
+	<script type="text/javascript" src="/files/js/jquery.pace.js"></script>
+	<script type="text/javascript" src="/files/js/jquery.easing.1.3.js"></script>
+	<script type="text/javascript" src="/files/js/jquery.easing.compatibility.js"></script>
+	<script type="text/javascript" src="/files/js/jquery.visible.min.js"></script>
+	<script type="text/javascript" src="/files/js/jquery.owl.carousel.min.js"></script>
+	<script type="text/javascript" src="/files/js/pond-header.js"></script>
+	<script type="text/javascript" src="/files/js/script.js"></script>
+
+	<!-- SCRIPTS -->
+	<script type='text/javascript' src="files/js/retina.js"></script>
+	<script type='text/javascript' src="files/js/jquery.pace.js"></script>
+	<script type='text/javascript' src="files/js/jquery.easing.1.3.js"></script>
+	<script type='text/javascript' src="files/js/jquery.easing.compatibility.js"></script>
+	<script type='text/javascript' src="files/js/jquery.visible.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.isotope.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.bgvideo.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.fitvids.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.fancybox.pack.js"></script>
+	<script type="text/javascript" src="files/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+	<script type="text/javascript" src="files/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.parallax.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.counter.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.scroll.min.js"></script>
+	<script type='text/javascript' src="files/js/jquery.owl.carousel.min.js"></script>
+	<script type='text/javascript' src="files/js/pond-form.js"></script>
+	<script type='text/javascript' src="files/js/pond-header.js"></script>
+	<script type='text/javascript' src="files/js/script.js"></script>
+	<!-- SCRIPTS -->
 
 </body>
+</html>
+	<!-- SCRIPTS -->
+
+	</body>
 </html>
