--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,1 +1,146 @@
-malia vibes
+<body class="bordered"> 
+
+<!-- BORDERS (Don't want any border? Delete the class bordered on the body and this part) -->
+<div id="bodyborder-left"></div>
+<div id="bodyborder-right"></div>
+<div id="bodyborder-top"></div>
+<div id="bodyborder-bottom"></div>
+<!-- BORDERS -->
+	
+<!-- PAGELOADER -->
+<div id="page-loader" class="text-light">
+	<div class="page-loader-inner">
+    	<div class="loader-logo-name">
+    		<img src="/files/uploads/pond-logo-light.png" alt="Logo"/></div>
+		<h6 class="alttitle title-minimal">Loading</h6>
+	</div>
+</div>
+<!-- PAGELOADER -->
+
+<!-- PAGE CONTENT -->
+<div id="page-content">
+
+	<!-- HEADER -->
+	<header id="header">        
+		<div class="header-inner clearfix">
+			
+           <!-- DEFAULT HEADER CONTENT -->
+		   	<div class="default-header-content">                 
+				<div id="logo" class="left-float">
+					<a id="default-logo" class="logotype" href="index.html">
+						<img src="files/uploads/pond-logo-light.png" alt="Logo"></a>
+					<a id="fixed-logo" class="logotype" href="index.html"><img src="files/uploads/pond-logo.png" alt="Logo"></a>
+				</div>    
+				
+				<div class="menu right-float clearfix">
+					<a href="#" class="open-nav"><span></span></a>
+					<nav id="main-nav" class="text-light">
+						<div class="nav-logo"><img src="files/uploads/pond-logo-light.png" alt="Logo"></div>
+						<div class="nav-inner">
+						<ul>
+						<li class="current-menu-item"><a href="index-multipage.html" data-bigletter="H">Home</a></li>
+						<li><a href="about-multipage.html" data-bigletter="A">About</a></li>
+						<li><a href="gallery-multipage.html" data-bigletter="G">Gallery</a></li>
+						<li><a href="work-multipage.html" data-bigletter="W">Work</a></li>
+						<li><a href="blog.html" data-bigletter="B">Blog</a></li>
+						<li><a href="elements.html" data-bigletter="F">Features</a>
+								<ul class="sub-menu">
+									<li><a href="elements.html">General Elements</a></li>    
+									<li><a href="portfolio-layout.html">Portfolio Layout</a></li>    
+									<li><a href="split-section.html">Split sections</a></li>
+								</ul>
+							</li>
+						<li><a href="contact-multipage.html" data-bigletter="C">Contact</a></li>
+						</ul>
+						</div>
+						<div class="nav-social">
+							<ul class="socialmedia-widget social-share">
+								<li class="facebook"><a href="#"></a></li>
+								<li class="twitter"><a href="#"></a></li>
+								<li class="linkedin"><a href="#"></a></li>
+								<li class="dribbble"><a href="#"></a></li>
+								<li class="behance"><a href="#"></a></li>
+								<li class="instagram"><a href="#"></a></li>
+							</ul>
+						</div>
+						<div class="nav-bg"></div>
+					</nav>
+				</div>
+			</div>
+           <!-- DEFAULT HEADER CONTENT -->
+                    
+		</div> <!-- END .header-inner -->
+	</header> <!-- END header -->
+	<!-- HEADER -->  
+	
+	
+	<!-- PAGEBODY -->
+	<div class="page-body">
+        
+		<div class="owlcarousel portfolio-carousel" data-pagination="false" data-navigation="true">
+			<div class="portfolio-carousel-item" style="background-image:url(files/uploads/sidewalk.jpg);">
+				<div class="imgoverlay overlay-dark overlay-transparent name-hidden">
+					<div class="overlaycaption">
+						<h5 class="overlay-name title-minimal"><strong>Malia</strong></h5>
+						<div class="separator-small"><span></span></div>
+						
+					</div>
+					<a href="malia.html" class="transition"></a>
+				</div>
+			</div>
+			<div class="portfolio-carousel-item" style="background-image:url(files/uploads/skateboard.jpg); background-position: -550px center;">
+				<div class="imgoverlay overlay-dark overlay-transparent name-hidden">
+					<div class="overlaycaption">
+						<h5 class="overlay-name title-minimal"><strong>Lyrics</strong></h5>
+						<div class="separator-small"><span></span></div>
+						<h2 class="alttitle">
+							<span class="fa fa-heart" style="color: #fff;"></span>
+						</h2>
+					</div>
+					<a href="lyrics.html" class="transition"></a>
+				</div>
+			</div>
+			<div class="portfolio-carousel-item" style="background-image:url(files/uploads/garage.jpg); ">
+				<div class="imgoverlay overlay-dark overlay-transparent name-hidden">
+					<div class="overlaycaption">
+						<h5 class="overlay-name title-minimal"><strong>Music</strong></h5>
+						<div class="separator-small"><span></span></div>
+						<h2 class="alttitle">
+							<span class="fa fa-soundcloud" style="color: #fff;"></span></h2>
+					</div>
+					<a href="music.html" class="transition"></a>
+				</div>
+			</div>
+			<div class="portfolio-carousel-item" style="background-image:url(files/uploads/roof.jpg);  background-position: -720px 0;">
+				<div class="imgoverlay overlay-dark overlay-transparent name-hidden">
+					<div class="overlaycaption">
+						<h5 class="overlay-name title-minimal"><strong>Videos</strong></h5>
+						<div class="separator-small"><span></span></div>
+						<h2 class="alttitle"><span class="fa fa-youtube" style="color: #fff;"></span></h2>
+					</div>
+					<a href="videos.html" class="transition"></a>
+				</div>
+			</div>
+			
+		</div>
+		
+      	<!-- FOOTER -->  
+		<footer class="sticky-footer">
+			<div class="footer-inner wrapper">
+				<ul class="socialmedia-widget left-float">
+					<li class="facebook"><a href="#"></a></li>
+					<li class="twitter"><a href="#"></a></li>
+					<li class="youtube"><a href="#"></a></li>
+					<li class="instagram"><a href="#"></a></li>
+				</ul>
+				<div class="copyright right-float">
+					Copyright &copy; 2014 by MaliaVibes.  Made with Love by Wildfyre
+				</div>
+         	</div>
+    	</footer>
+      	<!-- FOOTER -->         
+        
+ 	</div> <!-- END .page-body -->
+	<!-- PAGEBODY -->
+    
+</div> <!-- END #page-content -->
