--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,11 @@
 		<title>MaliaVibes</title>
 		<!-- DEFAULT META TAGS -->
 
+		<%= google_webfonts_link_tag "Montserrat", "Lato", "Droid Serif" %>
+
+		<%= google_webfonts_link_tag 	:montserrat        => [400, 700],
+                         				:lato 			   => [300, 400, 700] %>
+
 		<!-- FONTS -->
 		<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Lato:300,400,700' rel='stylesheet' type='text/css'>
