--- a/app/views/pages/photos.html.erb
+++ b/app/views/pages/photos.html.erb
@@ -31,7 +31,9 @@
 					<div class="spacer spacer-medium"></div>
 					<div class="spacer spacer-medium"></div>
 					<div class="main-title wrapper align-center">
-						<img src="https://cdn2.iconfinder.com/data/icons/social-aquiocons/128/Aquicon-Instagram.png" style=""/>
+						<a href="https://instagram.com/malia_kc/">
+							<img src="https://cdn2.iconfinder.com/data/icons/social-aquiocons/128/Aquicon-Instagram.png" style=""/>
+						</a>
 						<h4 class="title-minimal" data-bigletter="M"><strong>#MaliaVibes</strong></h4>
 					</div>
 					<div class="spacer spacer-medium"></div>
@@ -100,7 +102,7 @@
 
 
 					<div class="masonry-item icon">
-						<a href="#">
+						<a href="https://instagram.com/malia_kc/">
 						<img src="https://cdn2.iconfinder.com/data/icons/social-aquiocons/128/Aquicon-Instagram.png" style="padding-left: 40%; padding-top: 12%;"/>
 						<h6 style="text-align: center;"><strong>#MALIAVIBES</strong></h5>
 						</a>
