parrallax photos resized

--- a/app/views/pages/lyrics.html.erb
+++ b/app/views/pages/lyrics.html.erb
@@ -64,7 +64,7 @@
 
 
 	<!-- PAGE TITLE -->
-	<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/roof.jpg") %>" style="background-size: 120% !important;">
+	<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/roof.jpg") %>" style="background-size: cover !important;">
 		<div class="imgoverlay overlay-dark">
 			<div class="section-inner wrapper align-center">
 				<div class="blog-headline">
@@ -157,7 +157,7 @@
 		<br/>
 
 		<!-- PAGE TITLE -->
-		<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/fence.jpg")%>"  style="background-size: 120% !important;">
+		<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/fence.jpg")%>"  style="background-size: cover !important;">
 			<div class="imgoverlay overlay-dark">
 				<div class="section-inner wrapper align-center">
 					<div class="blog-headline">
@@ -267,7 +267,7 @@
 		<br/>
 
 		<!-- PAGE TITLE -->
-		<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/garage.jpg") %>" style="background-size: 120% !important;">
+		<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/garage.jpg") %>" style="background-size: cover !important;">
 			<div class="imgoverlay overlay-dark">
 				<div class="section-inner wrapper align-center">
 					<div class="blog-headline">
@@ -384,7 +384,7 @@
 		<br/>
 
 		<!-- PAGE TITLE -->
-		<section id="page-title" class="parallax-section" data-parallax-image="https://photos-2.dropbox.com/t/2/AAA_tw4gnJO7GFsXTPzK8Pc5-ySwLpWk0Xg8rA4h_S-ITg/12/228943526/jpeg/32x32/3/_/1/2/grass%20hill.jpg/CKbNlW0gASACIAMoAQ/IlQ3pVhoJ49d3Rr86hOxlbPNAAH5Oe4AtG1W6BGACv4?size=1280x960" style="background-size: 120% !important;">
+		<section id="page-title" class="parallax-section" data-parallax-image="https://photos-2.dropbox.com/t/2/AAA_tw4gnJO7GFsXTPzK8Pc5-ySwLpWk0Xg8rA4h_S-ITg/12/228943526/jpeg/32x32/3/_/1/2/grass%20hill.jpg/CKbNlW0gASACIAMoAQ/IlQ3pVhoJ49d3Rr86hOxlbPNAAH5Oe4AtG1W6BGACv4?size=1280x960" style="background-size: cover !important;">
 			<div class="imgoverlay overlay-dark">
 				<div class="section-inner wrapper align-center">
 					<div class="blog-headline">
@@ -464,25 +464,25 @@
 		<br/>
 				
 				
-		 		<div class="spacer spacer-big"></div> <!-- adding spacing for the footer section -->
-				
-				<!-- Single Pagination -->
-				<ul class="single-pagination fixed-pagination">
-					<li class="next">
-						<a href="videos.html" class="transition" data-name="Watch Malia">
-							<i class="pagination-icon"></i> Videos <i class="pagination-icon"></i>
-						</a>
-					</li>
-					<li class="prev">
-						<a href="music.html" class="transition" data-name="Listen to Malia">
-							<i class="pagination-icon"></i> Music <i class="pagination-icon"></i>
-						</a>
-					</li>
-				</ul>
-					
-			</div> <!-- END .section-inner-->
-		</section> <!-- END SECTION #blog-->
-	 	<!-- BLOG SINGLE SECTION -->
+ 		<div class="spacer spacer-big"></div> <!-- adding spacing for the footer section -->
+		
+		<!-- Single Pagination -->
+		<ul class="single-pagination fixed-pagination">
+			<li class="next">
+				<a href="videos.html" class="transition" data-name="Watch Malia">
+					<i class="pagination-icon"></i> Videos <i class="pagination-icon"></i>
+				</a>
+			</li>
+			<li class="prev">
+				<a href="music.html" class="transition" data-name="Listen to Malia">
+					<i class="pagination-icon"></i> Music <i class="pagination-icon"></i>
+				</a>
+			</li>
+		</ul>
+			
+	</div> <!-- END .section-inner-->
+</section> <!-- END SECTION #blog-->
+	<!-- BLOG SINGLE SECTION -->
 
       	<!-- FOOTER -->
 		<%= render "shared/footer" %>
