--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -37,29 +37,17 @@
 					<div class="nav-inner">
 					<ul>
 						<li>
-							<a href="/music" class="scroll-to" data-bigletter="H">Music</a>
+							<a href="/music" class="scroll-to" data-bigletter="M">Music</a>
 						</li>
 						<li>
-							<a href="/photos" class="scroll-to" data-bigletter="A">Photos</a>
+							<a href="/photos" class="scroll-to" data-bigletter="P">Photos</a>
 						</li>
 						<li>
-							<a href="/lyrics" class="scroll-to" data-bigletter="S">Lyrics</a>
+							<a href="/lyrics" class="scroll-to" data-bigletter="L">Lyrics</a>
 						</li>
 						<li>
-							<a href="/videos" class="scroll-to" data-bigletter="W">Videos</a>
+							<a href="/videos" class="scroll-to" data-bigletter="V">Videos</a>
 						</li>
-						<li  class="current-menu-item">
-							<a href="blog.html" data-bigletter="B">Blog</a>
-						</li>
-						<li>
-							<a href="elements.html" data-bigletter="F">Features</a>
-								<ul class="sub-menu">
-									<li><a href="elements.html">General Elements</a></li>    
-									<li><a href="portfolio-layout.html">Portfolio Layout</a></li>    
-									<li><a href="split-section.html">Split sections</a></li>
-								</ul>
-							</li>
-						<li><a href="index.html#contact" class="scroll-to" data-bigletter="C">Contact</a></li>
 					</ul>
 					</div>
 					<div class="nav-social">
