--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -7,7 +7,7 @@
 	
 
 	<!-- PAGE TITLE -->
-	<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/grasshill.jpg")%>" style="background-size: contain !important; background-position: 0px -1000px !important;">
+	<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/grasshill.jpg")%>" style="">
 		<div class="imgoverlay overlay-dark">
 			<div class="section-inner wrapper align-center">
 				<div class="blog-headline">
