soundcloud music links updated, gallery photos added

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,9 @@
 	
 		<!-- FIXED HEADER CONTENT (*optional / this will be shown when header is switching to fixed) -->
 		<div class="fixed-header-content"> 
-			<h1 id="header-name" class="alttitle title-minimal left-float"><strong>MaliaVibes</strong></h1>
+			<a href="/">
+				<h1 id="header-name" class="alttitle title-minimal left-float"><strong>MaliaVibes</strong></h1>
+			</a>
 			<div id="social-share" class="right-float">
 				<a href="#" class="show-share">Share</a>
 				<ul class="socialmedia-widget alttitle">
