--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,26 @@
+<style>
+
+.imgoverlay:after,
+.imgoverlay:hover:after {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: #000000;
+	z-index: 1;
+	-webkit-transition: 0.4s ease;
+	-moz-transition: 0.4s ease;
+	-ms-transition: 0.4s ease;
+	-o-transition: 0.4s ease;
+	transition: 0.4s ease;
+	opacity: .35;
+	filter: alpha(opacity=0);
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+	}
+</style>
+
 <!-- PAGE CONTENT -->
 <div id="page-content">
 
@@ -13,14 +36,17 @@
 			<div class="portfolio-carousel-item" style="background-image:url(<%= image_path("uploads/sidewalk.jpg")%>);">
 				<div class="imgoverlay overlay-dark overlay-transparent name-hidden">
 					<div class="overlaycaption">
-						<h5 class="overlay-name title-minimal"><strong>Malia</strong></h5>
+						<h5 class="overlay-name title-minimal"><strong>Photos</strong></h5>
 						<div class="separator-small"><span></span></div>
+						<h2 class="alttitle">
+							<span class="fa fa-instagram" style="color: #fff;"></span>
+						</h2>
 						
 					</div>
-					<a href="malia.html" class="transition"></a>
+					<a href="/photos" class="transition"></a>
 				</div>
 			</div>
-			<div class="portfolio-carousel-item" style="background-image:url(<%= image_path("uploads/skateboard.jpg")%>); background-position: -550px center;">
+			<div class="portfolio-carousel-item" style="background-image:url(<%= image_path("uploads/skateboard.jpg")%>); background-position: -250px center;">
 				<div class="imgoverlay overlay-dark overlay-transparent name-hidden">
 					<div class="overlaycaption">
 						<h5 class="overlay-name title-minimal"><strong>Lyrics</strong></h5>
@@ -29,10 +55,10 @@
 							<span class="fa fa-heart" style="color: #fff;"></span>
 						</h2>
 					</div>
-					<a href="lyrics.html" class="transition"></a>
+					<a href="/lyrics" class="transition"></a>
 				</div>
 			</div>
-			<div class="portfolio-carousel-item" style="background-image:url(<%= image_path("uploads/garage.jpg")%>); ">
+			<div class="portfolio-carousel-item" style="background-image:url(<%= image_path("gallery/7.jpg")%>); background-position: -200px center;">
 				<div class="imgoverlay overlay-dark overlay-transparent name-hidden">
 					<div class="overlaycaption">
 						<h5 class="overlay-name title-minimal"><strong>Music</strong></h5>
@@ -40,7 +66,7 @@
 						<h2 class="alttitle">
 							<span class="fa fa-soundcloud" style="color: #fff;"></span></h2>
 					</div>
-					<a href="portfolio-single3.html" class="transition"></a>
+					<a href="/music" class="transition"></a>
 				</div>
 			</div>
 			<div class="portfolio-carousel-item" style="background-image:url(<%= image_path("uploads/roof.jpg")%>);  background-position: -720px 0;">
@@ -50,7 +76,7 @@
 						<div class="separator-small"><span></span></div>
 						<h2 class="alttitle"><span class="fa fa-youtube" style="color: #fff;"></span></h2>
 					</div>
-					<a href="videos.html" class="transition"></a>
+					<a href="/videos" class="transition"></a>
 				</div>
 			</div>
 			
