--- a/app/assets/stylesheets/pages.css
+++ b/app/assets/stylesheets/pages.css
@@ -8,7 +8,7 @@ hr {border-bottom-color: #fff; border-top: 1px solid #e5e5e5;}
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #ffffff;
+	background: #000000;
 	z-index: 1;
 	-webkit-transition: 0.4s ease;
 	-moz-transition: 0.4s ease;
@@ -47,7 +47,7 @@ hr {border-bottom-color: #fff; border-top: 1px solid #e5e5e5;}
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #ffffff;
+	background: #000000;
 	z-index: 1;
 	-webkit-transition: 0.4s ease;
 	-moz-transition: 0.4s ease;
@@ -76,7 +76,7 @@ padding-top: 60px;
 	left: 0;
 	width: 100%;
 	height: 100%;
-	background: #ffffff;
+	background: #000000;
 	z-index: 1;
 	-webkit-transition: 0.4s ease;
 	-moz-transition: 0.4s ease;
