background photo updated

--- a/app/views/pages/videos.html.erb
+++ b/app/views/pages/videos.html.erb
@@ -7,7 +7,7 @@
 	
 
 	<!-- PAGE TITLE -->
-	<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/grasshill.jpg")%>" style="">
+	<section id="page-title" class="parallax-section" data-parallax-image="<%= image_path("uploads/face.jpg")%>" style="background-size: cover !important; background-position: 0 -100px !important;">
 		<div class="imgoverlay overlay-dark">
 			<div class="section-inner wrapper align-center">
 				<div class="blog-headline">
