logo link updated, header img updated

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -22,10 +22,10 @@
        <!-- DEFAULT HEADER CONTENT -->
 	   	<div class="default-header-content">                 
 			<div id="logo" class="left-float">
-				<a id="default-logo" class="logotype" href="index.html">
+				<a id="default-logo" class="logotype" href="/">
 					<%= image_tag("uploads/pond-logo.png", alt: "Logo") %>
 				</a>
-				<a id="fixed-logo" class="logotype" href="index.html">
+				<a id="fixed-logo" class="logotype" href="/">
 					<%= image_tag("uploads/pond-logo.png", alt: "Logo") %>
 				</a>
 			</div>    
