home page picture changed, /music - overlays removed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,7 +62,7 @@
 					<!-- THE FIRST SLIDE -->
 					<li data-transition="slidedown" data-slotamount="5" data-masterspeed="1200" class="imgoverlay">
 						<!-- THE MAIN IMAGE IN THE FIRST SLIDE -->
-						<img src="<%= image_path("uploads/roof.jpg")%>"   alt="slidebg4"  data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
+						<img src="<%= image_path("gallery/11.jpg")%>"   alt="slidebg4"  data-bgfit="cover" data-bgposition="center center" data-bgrepeat="no-repeat">
 
 						<!-- LAYER NR. 1 -->    
 						<div class="tp-caption srcaption-smallwhite title-minimal align-center lft ltb"
